# fake-saas

./: .env.example  Cargo.toml  README.md  capacitor.config.ts  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
android/app/: build.gradle
android/app/src/main/java/com/ningentsuru/app/: MainActivity.java
android/app/src/main/res/values/: strings.xml
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/(auth)/: layout.tsx
src/app/(auth)/login/: page.tsx
src/app/(auth)/signup/: page.tsx
src/app/(default)/: layout.tsx  page.tsx
src/app/(default)/dashboard/: page.tsx
src/app/(default)/inventory/: page.tsx
src/app/(default)/point-of-sale/: page.tsx
src/app/(default)/price-check/: page.tsx
src/components/molecules/: landing-actions.tsx  sign-out-button.tsx  subscription-pricing.tsx  theme-toggle.tsx
src/components/organisms/: footer.tsx  header.tsx  hero.tsx  landing-cross-platform.tsx  landing-features.tsx  landing-subscription.tsx  mobile-navigations.tsx  navigations.tsx  sticky-stack.tsx
src/components/templates/: default-template.tsx
src/components/ui/: calendar.tsx  carousel.tsx
src/e2e/: navigation.spec.ts
src/hooks/: use-is-client.ts  use-mobile.ts  use-session.ts
src/lib/: auth.ts  supabase.ts
